<resources>
    <string name="app_name">Dota Tracker</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="tab_home">Home</string>
    <string name="tab_activity_feed">Activity Feed</string>
    <string name="user_name">User Name</string>
    <string name="steam_name">Steam Name</string>
    <string name="steam_id">Steam ID</string>
    <string name="win_percentage_title">Win %</string>
    <string name="win_percentage_data">%f%%</string>
    <string name="most_played_hero">Most Played Heroes</string>
    <string name="hero_name">Hero Name</string>
    <string name="hero_games">%d game%s</string>
    <string name="hero_win_percentage">%f%% Games Won</string>

    <string name="tools_placeholder">PLACEHOLDER placeholder</string>

    <!-- DEREK'S STRINGS -->
    <string name="default_data">N/A</string>
    <string name="default_hero_image_content">Hero Image</string>
    <!-- activity_matches_overview.xml -->
    <string name="player_image">%1$s</string>
    <string name="wins_label">W</string>
    <string name="loses_label">L</string>
    <string name="win_rate_label">WR</string>
    <string name="average_stats_label">Averages in last %1$d matches</string>
    <string name="kills_label">K</string>
    <string name="deaths_label">D</string>
    <string name="assists_label">A</string>
    <string name="gpm_label">GPM</string>
    <string name="xpm_label">XPM</string>
    <string name="last_hits_label">LH</string>
    <string name="hero_dmg_label">HD</string>
    <string name="heal_label">HH</string>
    <string name="tower_dmg_label">TD</string>
    <string name="duration_label">DUR</string>
    <string name="recent_matches_label">Recent %1$d Matches</string>
    <!-- match_list_item.xml -->
    <string name="hero_image">%1$s</string>
    <!-- activity_match_details.xml -->
    <string name="radiant_tab">Radiant</string>
    <string name="versus_tab">Versus</string>
    <string name="dire_tab">Dire</string>
    <!-- fragment_match_team.xml -->
    <string name="players_label">Player</string>
    <string name="level_label">LVL</string>
    <string name="denies_label">DN</string>
    <string name="gold_label">G</string>
    <!-- MatchListAdapter tag keys -->
    <item type="id" name="viewholder_tag" />
    <item type="id" name="match_tag" />

    <!-- Login Activity -->
    <string name="login_username">Username: </string>
    <string name="login_password">Password: </string>
    <string name="login_no_account_hint">Don\'t have an account?</string>
    <string name="login_button">Log In!</string>
    <string name="login_sign_up">Register</string>
    <string name="login_steam_id">Input 64 bit Steam ID</string>
    <string name="login_refresh_matches">Refresh</string>

    <item type="id" name="login_viewholder_tag" />
    <item type="id" name="login_user_tag" />


    <string name="faction_name">%1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_fluff">FluffActivity</string>
    <string name="title_activity_maps">Map</string>

    <string name="CurrentUserId">114611</string>

</resources>
