<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/derekPrimary"
    android:orientation="vertical"
    android:padding="@dimen/fab_margin">

    <android.support.v4.view.ViewPager
        android:id="@+id/matchDetailViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <android.support.design.widget.TabLayout
        android:id="@+id/matchDetailTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabIndicatorColor="@android:color/darker_gray"
        >

        <android.support.design.widget.TabItem
            android:id="@+id/radiantTabItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radiant_tab"/>

        <android.support.design.widget.TabItem
            android:id="@+id/versusTabItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/versus_tab"/>

        <android.support.design.widget.TabItem
            android:id="@+id/direTabItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dire_tab"/>
    </android.support.design.widget.TabLayout>

</LinearLayout>