<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">


        <TextView
            android:id="@+id/loginUsernameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/login_username"/>

        <EditText
            android:id="@+id/loginUsernameEditText"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:background="@color/colorPrimaryDark"
            android:hint="@string/tools_placeholder"
            android:maxLines="1"
            android:paddingEnd="7dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:paddingStart="7dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="">

        <TextView
            android:id="@+id/loginPasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/login_password"/>

        <EditText
            android:id="@+id/loginPasswordEditText"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:background="@color/colorPrimaryDark"
            android:hint="@string/tools_placeholder"
            android:maxLines="1"
            android:paddingEnd="7dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:paddingStart="7dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="13dp"
            android:background="@drawable/border_drawable_accent"
            android:text="@string/login_button"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:background="@drawable/border_drawable"
        android:gravity="center">

        <TextView
            android:id="@+id/loginNoAccountLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="15dp"
            android:text="@string/login_no_account_hint"
            android:textSize="12sp"/>

        <Button
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/border_drawable_accent"
            android:maxLines="1"
            android:text="@string/login_sign_up"/>
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3"/>

</LinearLayout>