<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/matchDetailRadiantScoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_data"
            android:textAlignment="center"
            android:textSize="@dimen/score_font_size"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/score_spacing"
            android:layout_marginLeft="@dimen/score_spacing"
            android:layout_marginRight="@dimen/score_spacing"
            android:layout_marginStart="@dimen/score_spacing"
            android:orientation="vertical">

            <TextView
                android:id="@+id/matchDetailDurationTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/default_data"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/duration_font_size"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/matchDetailLastPlayedTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_data"
                android:textAlignment="center"
                android:textColor="@android:color/darker_gray"/>
        </LinearLayout>

        <TextView
            android:id="@+id/matchDetailDireScoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_data"
            android:textAlignment="center"
            android:textSize="@dimen/score_font_size"/>
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/matchDetailViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"/>

    <android.support.design.widget.TabLayout
        android:id="@+id/matchDetailTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabIndicatorColor="@android:color/darker_gray">

        <android.support.design.widget.TabItem
            android:id="@+id/radiantTabItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radiant_tab"/>

        <android.support.design.widget.TabItem
            android:id="@+id/versusTabItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/versus_tab"/>

        <android.support.design.widget.TabItem
            android:id="@+id/direTabItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dire_tab"/>
    </android.support.design.widget.TabLayout>

</LinearLayout>