<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:background="@color/seveDark"
              android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/paulding_hero"
        app:civ_border_width="3dp"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        android:columnCount="1"
        android:rowCount="3"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_gravity="center_vertical"
            android:text="@string/hero_name"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_gravity="center_vertical|right"
            android:text="@string/hero_games"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp"/>

        <ProgressBar
            android:layout_column="0"
            android:layout_row="1"
            android:layout_gravity="center_vertical"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:progressTint="@color/sevePrimary"
            android:secondaryProgressTintMode="add"
            android:progressBackgroundTint="@android:color/black"

            android:progress="50"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_gravity=""
            android:text="@string/hero_win_percentage"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp"/>


    </GridLayout>

</LinearLayout>