<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:gravity="center_horizontal"
                  android:orientation="vertical">

        <!--<de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profilePicture"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:elevation="10dp"
            android:onClick="secretTap"
            android:src="@drawable/steam_icon"
            app:civ_border_color="@color/seveBorder"
            app:civ_border_width="5dp"
            android:onClick="secretTap"
            android:elevation="10dp"/>-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:padding="5dp"
        android:background="@drawable/border_profile_picture">
        <ImageView
            android:id="@+id/profilePicture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/steam_icon"
            android:onClick="secretTap"
            android:elevation="10dp"
            />
        </LinearLayout>

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/circleImageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif"
            android:text="@string/user_name"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/seveText"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="monospace"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ringProgressBar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/win_percentage_title"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:typeface="monospace"/>


        <io.netopen.hotbitmapgg.library.view.RingProgressBar
            android:id="@+id/winRingProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            app:max="100"
            app:ringColor="@color/red"
            app:ringProgressColor="@color/green"
            app:textIsShow="false"
            app:ringWidth="7dp"
            app:style="STROKE"/>

        <TextView
            android:id="@+id/winPercentageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/win_percentage_data"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="monospace"
            android:layout_marginTop="-255dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/most_played_hero"
            />

        <LinearLayout
            android:id="@+id/mostPlayedHeroesListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="4dp"
            android:isScrollContainer="false"
            android:scrollbars="none"/>


    </LinearLayout>
</ScrollView>